# GP-PDEs-SparseCholesky

./: .gitignore  README.md  pyproject.toml
docs/: make_figures.py
examples/: _geometry_demo.py  airfoil_nonlin_elliptic.py  bowl_nonlin_elliptic.py  bracket_nonlin_elliptic.py  bunny_nonlin_elliptic.py  burgers_1d.py  crack_nonlin_elliptic.py  custom_pde_minimal.py  dumbbell_nonlin_elliptic.py  flow_past_cylinder.py  flower_nonlin_elliptic.py  heart_nonlin_elliptic.py  helix_nonlin_elliptic.py  koch_nonlin_elliptic.py  lshape_nonlin_elliptic.py  monge_ampere_2d.py  nonlin_elliptic_2d.py  porous_nonlin_elliptic.py  schwarzp_nonlin_elliptic.py  stadium_nonlin_elliptic.py  swiss_cheese_cube_nonlin_elliptic.py  swiss_cheese_nonlin_elliptic.py  torus_nonlin_elliptic.py  varlin_elliptic_2d.py
kolesky/: __init__.py  covariance.py  factorization.py  measurements.py  ordering.py  supernodes.py
kolesky/pde/: __init__.py  burgers.py  monge_ampere.py  nonlin_elliptic.py  pcg_ops.py  pdes.py  sampling.py  varlin_elliptic.py
tests/: test_smoke.py
